[package]
name = "bevy_game01"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
# enable this for release builds
# bevy = "0.9.1"
# enable this for debug builds
bevy = { version = "0.9.1", features = ["dynamic"] }
rand = "0.8.5"
bevy-debug-text-overlay = "4.0"

[profile.release]
strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
